[gd_scene load_steps=14 format=1]

[ext_resource path="res://left GUI.gd" type="Script" id=1]
[ext_resource path="res://graphics/ui/button_back_thin_stroke.png" type="Texture" id=2]
[ext_resource path="res://graphics/ui/button_back_large_stroke.png" type="Texture" id=3]
[ext_resource path="res://graphics/ui/button_back_disabled.png" type="Texture" id=4]
[ext_resource path="res://graphics/ui/ShellButton0001.png" type="Texture" id=5]
[ext_resource path="res://graphics/ui/ShellButton0003.png" type="Texture" id=6]
[ext_resource path="res://graphics/ui/ShellButton0004.png" type="Texture" id=7]
[ext_resource path="res://graphics/ui/PauseButton0001.png" type="Texture" id=8]
[ext_resource path="res://graphics/ui/PauseButton0003.png" type="Texture" id=9]
[ext_resource path="res://graphics/ui/PauseButton0004.png" type="Texture" id=10]
[ext_resource path="res://graphics/ui/button_kalulu_thin_stroke.png" type="Texture" id=11]
[ext_resource path="res://graphics/ui/button_kalulu_large_stroke.png" type="Texture" id=12]
[ext_resource path="res://graphics/ui/button_kalulu_disabled.png" type="Texture" id=13]

[node name="Control" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="OuterBox" type="VBoxContainer" parent="."]

rect/min_size = Vector2( 1, 5 )
rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = -20.0
margin/top = 0.0
margin/right = 280.0
margin/bottom = 1200.0
alignment = 0

[node name="button_back" type="TextureButton" parent="OuterBox" groups=[ "GUI buttons" ]]

rect/min_size = Vector2( 50, 50 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 0.0
margin/top = 42.0
margin/right = 300.0
margin/bottom = 342.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 2 )
textures/pressed = ExtResource( 3 )
textures/disabled = ExtResource( 4 )

[node name="InnerBox" type="VBoxContainer" parent="OuterBox"]

rect/min_size = Vector2( 30, 30 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 388.0
margin/right = 300.0
margin/bottom = 812.0
alignment = 0

[node name="shell_button" type="TextureButton" parent="OuterBox/InnerBox" groups=[ "GUI buttons" ]]

rect/min_size = Vector2( 50, 50 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 45.0
margin/top = 0.0
margin/right = 255.0
margin/bottom = 210.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
textures/pressed = ExtResource( 6 )
textures/disabled = ExtResource( 7 )
params/scale = Vector2( 0.7, 0.7 )

[node name="pause_button" type="TextureButton" parent="OuterBox/InnerBox" groups=[ "GUI buttons" ]]

rect/min_size = Vector2( 50, 50 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 0
size_flags/vertical = 0
margin/left = 45.0
margin/top = 214.0
margin/right = 255.0
margin/bottom = 424.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
textures/pressed = ExtResource( 9 )
textures/disabled = ExtResource( 10 )
params/scale = Vector2( 0.7, 0.7 )

[node name="kalulu_button" type="TextureButton" parent="OuterBox" groups=[ "GUI buttons" ]]

rect/min_size = Vector2( 50, 50 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 1
size_flags/vertical = 1
margin/left = 0.0
margin/top = 858.0
margin/right = 300.0
margin/bottom = 1158.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 11 )
textures/pressed = ExtResource( 12 )
textures/disabled = ExtResource( 13 )


